--- a/src/Todo.css
+++ b/src/Todo.css
@@ -11,8 +11,8 @@
     place-items: center;
 }
 .Center_div{
-    width: 30vw;
-    height: 80vh;
+    width: 500px;
+    height: 400px;
     background-color: #fff;
     border-radius: 30px;
     box-shadow: 0px 5px 5px grey;
@@ -20,12 +20,14 @@
 }
 .Center_div > h2{
     font-size: 30px;
-    padding: 20px 0px;
+    padding: 20px 0px; 
+    margin-left:30px;
 }
 .input_box > input{
     font-size: 20px;
     padding: 10px 20px;
-    max-width: 400px;
+    margin-left:30px;
+    max-width: 70%;
     outline: none;
     border: 0;
     border-bottom: 1px solid black;
@@ -35,6 +37,7 @@
 .mybtn{
     margin-left: 200px !important;
     text-align: center;
+    /* margin-right:100px !important; */
     
 }
 .list_box{
@@ -68,4 +71,16 @@
     border: 0;
     outline: 0;
     border-radius: 10px;
+}
+
+@media (max-width:780px){
+    .Center_div{
+        width: 70%;
+        height: 70%;
+        background-color: #fff;
+        border-radius: 30px;
+        box-shadow: 0px 5px 5px grey;
+        position: relative;
+    }
+
 }
